novice/3.2. First Steps Towards Programming.txt
>>> # Fibonacci series:
>>> # the sum of the elements defines the next
>>> a, b = 0, 1
>>> while a < 10:
... print(a)
  File "<stdin>", line 2
    print(a)
    ^
IndentationError: expected an indented block after 'while' statement on line 1
>>> 0
0
>>> 1
1
>>> 1
1
>>> 2
2
>>> 3
3
>>> 5
5
>>> 8
8
>>> i = 256*256
>>> print('The value of i is', i)
The value of i is 65536
>>>
>>> a, b = 0, 1
>>> while a < 1000:
...     print(a,end=',')
...     a, b = b, a+b
...
0,1,1,2,3,5,8,13,21,34,55,89,144,233,377,610,987,>>>

